# multiagent-emotion-steering

./: .env.example  .gitignore  CLAUDE.md  README.md  md.md  pyproject.toml
analysis/: case_report.md  findings.md  findings_fixed.md  n200_cause_analysis.html
docs/: method.md  presentation.html
experiments/00_replication/: README.md  config.yaml  judge_rubrics.yaml  run.sh
experiments/00_smoke/: config.yaml  run.sh
experiments/01_reward_matrix/: e1_external_only.yaml  e2_intrinsic_single.yaml  e3_intrinsic_composite.yaml  e4_intrinsic_plus_external.yaml  e5_opposed.yaml  run_sweep.sh
experiments/02_continuous/: config.yaml  run.sh
experiments/03_objective_factorial/: README.md  f1_single_emotion.yaml  f2_single_persona.yaml  f3_multi_emotion.yaml  f4_multi_persona.yaml  f5_mixed.yaml  run_factorial.sh
experiments/06_gemma2_27b_sweep/: run.sh
experiments/07_gemma2_9b_sweep/: run.sh
experiments/08_llama3_8b_sweep/: run.sh
experiments/09_qwen25_7b_sweep/: run.sh
experiments/10_steering_benchmarks/: run_llama3_8b.sh  run_qwen25_7b.sh
scripts/: analyze_cases.py  analyze_steering.py  analyze_synthesis.py  build_report.py  cause_analysis.py  demo_contagion_sweep.py  demo_multiagent.py  demo_steering.py  demo_task_sweep.py  eval_behaviors.py  extract_vectors.py  fix_extraction.py  fix_extraction_n500.py  render_cause_analysis.py  render_compare_orderings.py  replicate_anthropic.py  run_extraction_auc.py  steer_benchmark.py  sweep_extraction_auc.py  train.py  train_online.py  two_agent_dialogue.py
tests/: test_vector_extraction.py
(+39 files in other folders)
